# review-pr

./: .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: architecture.md  check-order.md  google-chat-pubsub-setup.md  opening-chat-message.md  project-setup.md  workspace-events-auto-renewal.md
scripts/: manage_subscription.py  renew_cron.sh  start_bot.sh
src/review_pr/: chat.py  config.py  dedup.py  github.py  handler.py  logging_setup.py  messages.py  notify.py  pr_url.py  reactions.py  renewal_state.py  subscriber.py
tests/: conftest.py  test_chat.py  test_config.py  test_dedup.py  test_github.py  test_handler.py  test_logging_setup.py  test_messages.py  test_notify.py  test_pr_url.py  test_reactions.py  test_renewal_state.py  test_subscriber.py
utils/: create_space_subscription.py
